# pupinn

./: .env.example  .gitignore  README.md  agent.md  data-flow.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  clippy.toml  diesel.toml  rustfmt.toml
backend/migrations/00000000000001_create_users/: down.sql  up.sql
backend/migrations/00000000000002_create_rooms/: down.sql  up.sql
backend/migrations/00000000000003_create_bookings/: down.sql  up.sql
backend/migrations/00000000000007_extend_users_and_bookings/: down.sql  up.sql
backend/migrations/00000000000008_add_price_to_rooms/: down.sql  up.sql
backend/migrations/00000000000009_add_overstay_status/: down.sql  up.sql
backend/migrations/00000000000014_add_ai_features/: up.sql
backend/migrations/2026-01-03-091713-0000_add_stale_statuses/: up.sql
backend/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs  schema.rs
backend/src/api/: auth.rs  bookings.rs  chat.rs  employees.rs  financial.rs  guest_bookings.rs  guests.rs  middleware.rs  mod.rs  rooms.rs  settings.rs
backend/src/models/: booking.rs  guest_note.rs  mod.rs  room.rs  setting.rs  user.rs
backend/src/services/: ai_service.rs  auth_service.rs  booking_service.rs  guest_service.rs  mod.rs  room_service.rs
backend/src/utils/: mod.rs  validation.rs
backend/tests/: booking_tests.rs  cleaner_tests.rs  guest_auth_tests.rs  guest_booking_tests.rs  room_tests.rs  use_case_tests.rs
frontend/: package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api-client.ts  (+2 more)
(+68 files in other folders)
