[package]
name = "hotel-management-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "hotel_management_backend"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
diesel = {version = "2.3.4", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
rand = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bigdecimal = { version = "0.4", features = ["serde"] }
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
tokio-stream = "0.1.18"
futures = "0.3.31"
rig-core = "0.28.0"
schemars = "0.8.16"

[dev-dependencies]
tokio-test = "0.4"
regex = "1"
